--- a/.eslintrc
+++ b/.eslintrc
@@ -49,7 +49,9 @@
         "import/no-named-as-default": "warn",
         "space-before-function-paren": ["error", "always"],
         "import/prefer-default-export": "warn",
-        "import/no-unresolved": "error",
+        "import/no-unresolved": ["error", {
+            "caseSensitive": false
+        }],
         "jsx-a11y/no-static-element-interactions": ["error", {
             "handlers": [
                 "onClick",
