--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
