--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-hot-loader": "^1.3.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.7.2",
     "eslint-import-resolver-webpack": "^0.8.3",
@@ -49,6 +50,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
