--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^3.0.0-beta.7",
+    "redux-devtools": "^3.4.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
@@ -53,6 +54,8 @@
     "font-awesome": "^4.7.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
