--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
   },
   "homepage": "https://github.com/AlexXvanity/trello#readme",
   "devDependencies": {
-    "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-hot-loader": "^1.3.1",
