--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-hot-loader": "^3.0.0-beta.7",
     "redux-devtools": "^3.4.0",
     "redux-devtools-extension": "^2.13.2",
