--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,10 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "css-hot-loader": "^1.3.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.7.2",
