--- a/client/.babelrc
+++ b/client/.babelrc
@@ -2,7 +2,7 @@
     "presets": [
         "react",
         "env",
-        "stage-0",
-        "es2015"
-    ]
+        "stage-0"
+    ],
+    "plugins": ["transform-async-to-generator"]
 }
