--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -23,7 +23,9 @@
         "jsx-a11y"
     ],
     "rules": {
-        "indent": ["error", 4],
+        "indent": ["error", 4, {
+            "SwitchCase": 1
+        }],
         "eol-last": ["error", "always"],
         "comma-dangle": ["error", "never"],
         "max-len": ["error", 80],
