--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "hashids": "^1.1.4",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
