--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "hashids": "^1.1.4",
+    "image-size": "^0.6.2",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
