--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dominant-color": "0.0.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "hashids": "^1.1.4",
@@ -19,6 +20,7 @@
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "node-vibrant": "^3.0.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
