--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,11 @@
   "name": "trello",
   "version": "1.0.0",
   "description": "Trello Clone",
-  "main": "webpack.config.js",
+  "main": "webpack.dev.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -p --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -39,14 +40,17 @@
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "react-hot-loader": "^3.0.0-beta.7",
     "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "webpack-dev-server": "^2.8.2",
+    "webpack-merge": "^4.1.1"
   },
   "dependencies": {
     "axios": "^0.17.0",
