--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "server",
+  "name": "Kanban",
   "version": "1.0.0",
-  "description": "",
+  "description": "Kanban Application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon --inspect index.js"
+    "server": "nodemon --inspect index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "hashids": "^1.1.4",
